End points User y Scores
