# Game-Score-Manager/game-score-v1.2/backend/src/module/auth/auth.controller.ts
@@ -1,6 +1,7 @@
-import { Body, Controller, Post } from '@nestjs/common';
+import { Body, Controller, Param, Patch, Post, Request } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { LoginDto, RegisterDto } from './dto/auth.dto';
+import { Role } from '@prisma/client';
 
 @Controller('auth')
 export class AuthController {
@@ -8,11 +9,32 @@ export class AuthController {
 
   @Post('register')
   async register(@Body() registerDto: RegisterDto) {
-    return this.authService.register(registerDto);
+    const user = await this.authService.register(registerDto);
+    const token = await this.authService.generateToken(user);
+    return {
+      token: token,
+      user: user,
+    };
   }
 
   @Post('login')
   async login(@Body() loginDto: LoginDto) {
-    return this.authService.login(loginDto);
+    const user = await this.authService.login(loginDto);
+    const token = await this.authService.generateToken(user);
+    return {
+      token: token,
+      user: user,
+    };
+  }
+
+  @Patch('users/:id/role')
+  /*  @UseGuards(JwtAuthGuard) */
+  async changeUserRole(
+    @Request() req,
+    @Param('id') userId: number,
+    @Body('role') newRole: Role,
+  ) {
+    // req.user viene del JwtAuthGuard y contiene la info del token
+    return this.authService.changeUserRole(req.user.id, userId, newRole);
   }
 }
